public/css/forum.css
/* ... */
#thread-control span:hover {
color: #FFFFFF;
background: #ED135A;
}

.comment .content-block {
margin-left: 125px;
line-height: 18px;
font-size: 14px;
}

.comment .content-block code {
white-space: pre;
background: #FFFFEE;
display: block;
padding: 10px 0;
}

.comment .content-block code br {
display: none;
}

.comment .content-block, #thread .comment textarea {
font-size: 14px;
line-height:1.3;
}

#thread .comment textarea {
display: block;
height: 140px;
width: 100%;
border: solid 1px #EEEEEE;
position: relative;
top: -2px;
left: -2px;
}

#thread .comment button {
margin-right: 2px;
}

#notifier {
	position:fixed;
  bottom: 10px;
	left: 10px;
	width: 198px;
	border: solid 3px #FFF;
	text-align: center;
	padding: 7px 0;
	font-size: 11px;
  background: none repeat scroll 0% 0% rgb(254, 246, 234); 
}
#notifier a { 
	color: #545454;
	font-size: 12px;
}

form {text-align: left;}

form .input {
margin-bottom: 4px;
min-height: 24px;
}

form .input label {
float: left;
width: 100px;
line-height: 24px;
}

form .input.text input {
padding: 3px;
}

form .input.textarea textarea {
line-height: 24px;
padding: 3px;
}

form .input.text input, form .input.textarea textarea {
border: solid 1px #999999;
}

#reply-lc {
float: left;
}

#reply-lc h4 {
font-size: 14px;
margin-bottom: 10px;
}

#post-shortcuts {
background: #F4F4F4;
border: dotted 1px #8A8A8A;
padding: 5px;
width: 85px;
}

#post-shortcuts p {
font-size: 9px;
}

#post-shortcuts li a{
font-size: 9px;
color: #ED135A;
text-decoration: underline;
line-height: 9px;
height: 9px;
cursor: pointer;
}

#post-shortcuts li a:hover {
color: #FFFFFF;
background: #ED135A;
}

#reply-rc {
margin-left: 130px;
background: url(../img/benice.gif) 446px 150px no-repeat;
}

#pinkies {
line-height: 22px;
padding-bottom: 2px;
}

#pinkies span {
padding-top: 6px;
cursor: pointer;
}
#pinkies span:hover {
background: #494949;
}

#thread-content-input {
width: 450px;
height: 180px;
}

#reply-rc p {
font-weight: 700;
margin: 8px 0 9px 0;
}

#preferences form {
margin-top: 10px;
}

#preferences .input label {
width: 150px;
}

div.tquote {
	background: #FAFAFA;
	padding: 5px 5px 7px 6px;
	font-size: 12px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	border: solid 1px #EEEEEE;
	color: #555555;
	width: auto;
}

div.tquote div.tqname {
	font-size: 10px;
	margin-bottom: 3px;
	font-style: italic;
}
/*------- profile information -------- */
.personal_info_box { 
	width: 220px;
	float: left;
}
#latest-posts { 	
	width: 80%;
	margin-left: 235px;
}
#latest-posts hr {
	border: none; 
	border-bottom: solid 1px #ccc;
} 
#this-is-you { 
	background: #545454;
	width: 200px;
	
	color: #FFF;
	font-size: 14px;
	margin: 0px;
	padding: 10px;
	margin-bottom: 10px;
	
}
#this-is-you  a{ 
	color: #ff6de2;
	margin-bottom: 10px;
}
#stats { 

}
.post-block  a {
	text-decoration: none;
} 
.post-container h3{ 
	line-height: 24px;
	font-size: 20px;
	
}
.post-block { 	
	display: block;
	background: #f2f2f2;
	text-transform: uppercase;
	float: left;
	padding: 3px;
	font-size: 9px;
	margin-right: 3px;
	margin-top: 2px;
	
}
.recent-post-content { 
	padding-top: 5px;
	padding-bottom: 5px;
	
}
#user #information {
	
}
.small_profile_caps { 
	font-size: 10px;
	text-transforum: uppercase;
}
.standard_profile_info_box h3 { 
	border-bottom: dotted 1px #545454;
	margin-bottom: 3px;
	
}
.standard_profile_info_box { 
	background: #F9F9f9;
	border: solid 1px #CCCCCC;
	margin-bottom: 10px;
	font-size: 12px;
	line-height: 18px;
	padding: 8px;
	width: 200px;
}

#pm-box-controls {
background: #FFEAEA;
padding: 6px;
border-bottom: solid 1px #BBBBBB;
}

#pm-box-controls a {
font-size: 11px;
}

#pm-inbox .message.header {
background: transparent;
border-bottom: solid 1px #BBBBBB;
}

#pm-inbox .message.header div {
font-size: 10px !important;
}

#pm-inbox .message {
margin: 2px 0;
line-height: 24px;
height: 24px;
padding-left: 4px;
background: #F5FBFE;
}

#pm-inbox .message.unread .subject {
font-weight: 700;
}

#pm-inbox .message div {
float: left;
line-height: 24px !important;
color: #666666;
font-size: 12px;
font-weight: 500;
padding: 0 !important;
margin: 0 !important;
}

#pm-inbox .message .subject {
width: 60%;
}

#pm-inbox .message .sender {
width: 20%;
}

#pm-inbox .blue-bar {
height: 1px;
background: #ACE1F9;
width: 100%;
}

#pm-inbox .ctrl-bar, #pm-message .ctrl-bar {
line-height: 30px;
height: 30px;
border-bottom: 1px dotted #959595;
}

#pm-inbox .pagination, #pm-message .pagination {
border: 0;
float: left;
font-size: 11px;
}

#pm-inbox .new-message, #pm-message .new-message {
float: right;
display: block;
background: #E6F7FE;
padding: 3px 7px;
height: 18px;
line-height: 18px;
margin-top: 3px;
font-size: 10px;
}

#pm-message-meta {
line-height: 20px;
height: 20px;
font-size: 10px;
border-bottom: solid 1px #BBBBBB;
}

#pm-message-meta span {
padding: 0 4px;
}

#pm-message-meta span span {
padding: 0;
color: #7E7E7E;
}

#pm-message .content {
padding: 20px 0;
border-bottom: 1px dotted #959595;
}

#errors {
background: #FFFFEE;
border: solid 1px #ED135A;
padding: 12px;
margin-top: 10px;
width: 400px;
}

#errors h4 {
font-size: 14px;
margin-bottom: 4px;
}

#errors ul {
margin-left: 20px;
}
#errors li {
list-style: disc;
font-size: 11px;
}

#buddy-input {
margin-bottom: 4px;
}

#buddy-input, #buddy-radios {
height: 22px;
line-height: 18px;
}

#buddy-input label {
float: left;
}

#buddy-input label, #buddy-radios label {
font-size: 12px;
font-weight: 500;
margin: 0;
width: 100px;
float: left;
}

#command-pick-one {
background: orange;
height: 10px;
width: 10px;
}

#buddy-radios label, #buddy-radios input {
float: left;
}

#buddy-radio-inputs label {
width: auto;
margin-right: 20px;
}

#buddy-radios {
margin-bottom: 8px;
}

.buddy-listing, .enemy-listing {
width: 130px;
margin: 0 10px 10px 0;
padding: 10px;
float: left;
}

.buddy-listing {
background: #EBF4DD;
}

.enemy-listing {
background: #FFEAEA;
}
/* ... */

